unpackaged/main/default/objects/GIdentifyEntityInformation__c/GIdentifyEntityInformation__c.object-meta.xml
<CustomObject>
    <label>GIdentifyEntityInformation</label>
    <nameField>
        <label>GIdentifyEntityInformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GIdentifyEntityInformations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>