unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/DeathMasterFileCode__c.field-meta.xml
<CustomField>
    <fullName>DeathMasterFileCode__c</fullName>
    <label>Death Master File Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>