unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/DeathMasterFileDetails__c.field-meta.xml
<CustomField>
    <fullName>DeathMasterFileDetails__c</fullName>
    <label>Death Master File Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>