unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/DOB_Status__c.field-meta.xml
<CustomField>
    <fullName>DOB_Status__c</fullName>
    <description>R1811288</description>
    <label>DOB Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>