unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/EmployerIdentificationNumberCode__c.field-meta.xml
<CustomField>
    <fullName>EmployerIdentificationNumberCode__c</fullName>
    <label>Employer Identification Number Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>