unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/EmployerIdentificationNumberDetails__c.field-meta.xml
<CustomField>
    <fullName>EmployerIdentificationNumberDetails__c</fullName>
    <label>Employer Identification Number Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>