unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/Fraud_Activity_Found__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Activity_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1917612</description>
    <label>Fraud Activity Found</label>
    <type>Checkbox</type>
</CustomField>