unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/GIACTIdentifyResponse__c.field-meta.xml
<CustomField>
    <fullName>GIACTIdentifyResponse__c</fullName>
    <label>GIACT Identify Response</label>
    <referenceTo>GIACTIdentifyResponses__c</referenceTo>
    <relationshipLabel>GIdentifyEntityInformations</relationshipLabel>
    <relationshipName>GIdentifyEntityInformations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>