unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/GIdentifyAdvanceRequest__c.field-meta.xml
<CustomField>
    <fullName>GIdentifyAdvanceRequest__c</fullName>
    <label>GIdentifyAdvance Request</label>
    <length>100768</length>
    <type>LongTextArea</type>
</CustomField>