unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/GIdentifyAdvanceResponse__c.field-meta.xml
<CustomField>
    <fullName>GIdentifyAdvanceResponse__c</fullName>
    <label>GIdentifyAdvance Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>