unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/gIdentifyRequestText__c.field-meta.xml
<CustomField>
    <fullName>gIdentifyRequestText__c</fullName>
    <label>gIdentify Request Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>