unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/gIdentifyResponseReason__c.field-meta.xml
<CustomField>
    <fullName>gIdentifyResponseReason__c</fullName>
    <label>gIdentify Response Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>