unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/gIdentifyResponseText__c.field-meta.xml
<CustomField>
    <fullName>gIdentifyResponseText__c</fullName>
    <label>gIdentify Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>