unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/ListMatchCode__c.field-meta.xml
<CustomField>
    <fullName>ListMatchCode__c</fullName>
    <label>List Match Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>