unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/ListMatchDetails__c.field-meta.xml
<CustomField>
    <fullName>ListMatchDetails__c</fullName>
    <label>List Match Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>