unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/MyCase_Id__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Id__c</fullName>
    <externalId>true</externalId>
    <label>MyCase Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>