unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/NameValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>NameValidationStatus__c</fullName>
    <label>Name Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>