unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/NumberofBankruptcies__c.field-meta.xml
<CustomField>
    <fullName>NumberofBankruptcies__c</fullName>
    <label># of Bankruptcies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>