unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/NumberOfJudgements__c.field-meta.xml
<CustomField>
    <fullName>NumberOfJudgements__c</fullName>
    <label># of Judgements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>