unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/NumberofLiens__c.field-meta.xml
<CustomField>
    <fullName>NumberofLiens__c</fullName>
    <label># of Liens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>