unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/OFACInformation__c.field-meta.xml
<CustomField>
    <fullName>OFACInformation__c</fullName>
    <label>OFAC Information</label>
    <type>TextArea</type>
</CustomField>