unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/RegistrationType__c.field-meta.xml
<CustomField>
    <fullName>RegistrationType__c</fullName>
    <label>Registration Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>