unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/RequestUniqueId__c.field-meta.xml
<CustomField>
    <fullName>RequestUniqueId__c</fullName>
    <label>Request Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>