unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/SECStatus__c.field-meta.xml
<CustomField>
    <fullName>SECStatus__c</fullName>
    <label>SEC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>