unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/TaxIDNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxIDNumber__c</fullName>
    <label>TaxID Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>