unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/TinNameCode__c.field-meta.xml
<CustomField>
    <fullName>TinNameCode__c</fullName>
    <label>Tin Name Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>