unpackaged/main/default/objects/GIdentifyEntityInformation__c/fields/TinNameCodeDetails__c.field-meta.xml
<CustomField>
    <fullName>TinNameCodeDetails__c</fullName>
    <label>Tin Name Code Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>