unpackaged/main/default/objects/GIdentifyEntityInformation__c/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <label>Individual</label>
</RecordType>