unpackaged/main/default/objects/GIdentifyEntityInformation__c/recordTypes/TinCheck.recordType-meta.xml
<RecordType>
    <fullName>TinCheck</fullName>
    <active>true</active>
    <label>TinCheck</label>
</RecordType>